# foobar-universal-multiroom

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: windows-cmake.yml
components/foo_out_multiroom_bridge/: README.md  component_version.h  foo_out_multiroom_bridge.vcxproj  main.cpp  multiroom_component_state.cpp  multiroom_component_state.h  multiroom_output.cpp  playback_metadata.cpp  preferences.cpp  preferences.rc  preferences_resource.h  product_identity.h  speaker_selector_element.cpp  speaker_selector_popup.h  speaker_toolbar.cpp  speaker_toolbar.h  stdafx.h  transport.h
components/foo_out_multiroom_bridge/core/: multiroom_engine.cpp  multiroom_engine.h  output_registry.cpp  output_registry.h  packet_scheduler.cpp  packet_scheduler.h  speaker_groups.cpp  speaker_groups.h  sync_clock.cpp  sync_clock.h  volume_control.h
docs/: AIRPLAY_ENGINE.md  ARCHITECTURE.md  MACOS_TESTER.md  RISKS.md  ROADMAP.md  SYNC_ENGINE.md  UI_AUDIT.md  UI_PLAN.md
patches/: airplay2-compact-bplist.patch
src/: airplay_audio_diagnostics.cpp  airplay_macos_probe.cpp  airplay_network_probe.cpp  transport_contract_probe.cpp
transports/airplay/: README.md  airplay2_credentials.cpp  airplay2_credentials.h  airplay2_external_crypto.cpp  airplay2_external_crypto.h  airplay2_session.cpp  airplay2_session.h  airplay_discovery.cpp  airplay_discovery.h  airplay_rtsp.cpp  airplay_rtsp.h  airplay_session.cpp  airplay_session.h  airplay_timing.h  airplay_transport.cpp  airplay_transport.h
transports/heos/: README.md
